=======================================================================
   This file contains a high-level summary of changes between recent
   stable releases of Type-Tiny. For a more detailed list, including
   changes in development releases, see the "Changes" file instead.
=======================================================================

2013-09-05 Type-Tiny version 0.026 released!

 - Type::Params now provides a `multisig` function.
 - Cleaned up and documented the internals of Exporter::TypeTiny; this module
   is likely to be split out as a separate CPAN distribution in the near
   future.
 - Type-Tiny is now packaged using Dist::Inkt.
 - Various bugfixes.

2013-09-26 Type-Tiny version 0.028 released!

 - Fix some places where Type::Tiny could leak memory via circular references.
 - Type::Tiny now provides a `coercibles` method, useful for manually chaining
   coercions (and there's documentation about this in the manual).
 - More verbose stringification for Type::Exception::Assertion.
 - Types::TypeTiny::to_TypeTiny now preserves coercions on Moose type
   constraints.
 - Stop using base.pm.

2013-10-18 Type-Tiny version 0.030 released!

 - Improved Perl 5.8.x support.
 - Exporter::TypeTiny deprecated; use Exporter::Tiny instead!
 - Renamed the Type::Exception modules to Error::TypeTiny.

2013-11-05 Type-Tiny version 0.032 released!

 - Dict[`a] is now allowed to take a slurpy parameter for validating any
   remaining key/value pairs.
 - Maybe[`a] now has a deep coercion.
 - Tuple[] (with empty parameter list) now explicitly tests for an empty
   arrayref. (Ditto Dict[] for an empty hashref.)
 - Moose 2.11xx fixes.