@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Error::TypeTiny::AUTHORITY = 'cpan:TOBYINK';
-	$Error::TypeTiny::VERSION   = '0.033_04';
+	$Error::TypeTiny::VERSION   = '0.034';
 }
 
 use overload
