@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Type::Registry::AUTHORITY = 'cpan:TOBYINK';
-	$Type::Registry::VERSION   = '0.033_04';
+	$Type::Registry::VERSION   = '0.034';
 }
 
 use Exporter::Tiny qw( mkopt );
