@@ -12,7 +12,7 @@ BEGIN {
 
 BEGIN {
 	$Types::Standard::AUTHORITY = 'cpan:TOBYINK';
-	$Types::Standard::VERSION   = '0.033_04';
+	$Types::Standard::VERSION   = '0.034';
 }
 
 use Type::Library -base;
